# ChangeLog for www-apache/mod_caucho
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_caucho/ChangeLog,v 1.51 2010/04/02 12:40:37 nelchael Exp $

*mod_caucho-4.0.5 (02 Apr 2010)

  02 Apr 2010; Krzysztof Pawlik <nelchael@gentoo.org>
  -mod_caucho-4.0.3.ebuild, +mod_caucho-4.0.5.ebuild:
  Version bump to Resin 4.0.5.

*mod_caucho-4.0.3 (27 Feb 2010)

  27 Feb 2010; Krzysiek Pawlik <nelchael@gentoo.org>
  +mod_caucho-4.0.3.ebuild:
  Version bump.

*mod_caucho-3.1.9 (12 Dec 2009)

  12 Dec 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +mod_caucho-3.1.9.ebuild:
  Version bump.

  18 Sep 2009; Benedikt Böhm <hollow@gentoo.org> files/88_mod_caucho.conf,
  mod_caucho-3.0.25.ebuild, mod_caucho-3.1.8.ebuild,
  mod_caucho-3.2.1.ebuild:
  cleanup ebuild and convert to EAPI2

  02 Aug 2009; Markus Meier <maekke@gentoo.org> mod_caucho-3.2.1.ebuild:
  amd64 stable, bug #275672

  30 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  mod_caucho-3.2.1.ebuild:
  stable x86, bug 275672

  01 May 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  -mod_caucho-3.0.26.ebuild, -mod_caucho-3.1.6.ebuild:
  Drop obsolete version.

*mod_caucho-3.2.1 (02 Feb 2009)

  02 Feb 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +mod_caucho-3.2.1.ebuild:
  Version bump.

*mod_caucho-3.1.8 (10 Jan 2009)

  10 Jan 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  +mod_caucho-3.1.8.ebuild:
  Version bump.

*mod_caucho-3.0.26 (10 Jun 2008)

  10 Jun 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +mod_caucho-3.0.26.ebuild:
  Version bump.

  12 May 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  -mod_caucho-3.0.24.ebuild:
  Remove old version.

  11 May 2008; Markus Rothe <corsair@gentoo.org> mod_caucho-3.0.25.ebuild:
  Stable on ppc64; bug #221263

  11 May 2008; Markus Meier <maekke@gentoo.org> mod_caucho-3.0.25.ebuild:
  x86 stable, bug #221263

  10 May 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  mod_caucho-3.1.6.ebuild: