@@ -7,6 +7,7 @@ DIST resin-3.1.8-src.zip 13604988 RMD160 0d72302adb320758224626f7a4863f53e9dfa83
 DIST resin-3.1.9-src.zip 13611096 RMD160 6a4c7eec574eeee73cce38ec17b0d997bada52f1 SHA1 28d91e510e5f9a1e861490dc81b484951ba13370 SHA256 f64825ac061122517cb4fb092122272d8af32ef7d63f7d158ba3a2d56a4a9b08
 DIST resin-3.2.1-src.zip 14228533 RMD160 42ab0609d1c00a5bba8f5d3be64b09ca81a8b0a9 SHA1 25c74bb307bd2fbce6e6324effb644b33715c1fb SHA256 d51d81b7748f90936c9f13ad4dea704d250fe9bd4cc73ddf2387def05ed3f591
 DIST resin-4.0.5-src.zip 16494405 RMD160 415116a3820288d5145a07fcd81571c5feb71424 SHA1 fddb58a6e31f413a452eb7d5003ceb2f928e7330 SHA256 e11e6d885e1ceec6eb0c4d524fb9904fbea5a7c894786f2f99a5bdc23e8c9aad
+DIST resin-4.0.6-src.zip 16635845 RMD160 c61c6f13cd48d572abda8fb103c404a4b439dbb8 SHA1 1cbd1fbf2ce5cdee47714f2d57c2e4831feee2d0 SHA256 3b653383c8417496e4ae22b9bda9e521842a2115d51a3743e9608d65402b2a91
 DIST resin-gentoo-patches-3.0.25.tar.bz2 4781 RMD160 b7e370e5ce5869e22659caa77f81fe341894e8e6 SHA1 b11675e71cd0a5c019ad4368a2c4440bbe42226a SHA256 6f47dddc3c29ad1465efdb8c912d1625cf769f5f8dc45dd6b0782655ba5c97cd
 DIST resin-gentoo-patches-3.1.8.tar.bz2 3883 RMD160 af457d88928c2d817524434dce917de78baa8915 SHA1 794b493060b684a492619c3ad80ad5badb94b0f5 SHA256 6b304e3e593d1c2727d945b2b3d9e41ea2880e96b3e3691ccc1dfcf7ae4759a6
 DIST resin-gentoo-patches-3.1.9.tar.bz2 3872 RMD160 0fea48e0b94c19e6dc6946f0d85be7808f7b4f3d SHA1 f828d981380430dedf6617c07d2d09ba583dc4c9 SHA256 c22dd2a7933385b76f239a89dff4eddd2895bc503b8821c5474a3b3a56260506
@@ -16,16 +17,17 @@ EBUILD mod_caucho-3.1.8.ebuild 1140 RMD160 0b660ef836410b3917a4e1961027ff8a036e3
 EBUILD mod_caucho-3.1.9.ebuild 1142 RMD160 3d4505daa4bc495ba67bc2ff1544850f21592e66 SHA1 8599d17bd9f2b52895fb5cab532ce7ddc6958108 SHA256 fa839533cd89cc61b0128a96d2859e6df0be7b0053fe256de8fad6dd58f3f9f6
 EBUILD mod_caucho-3.2.1.ebuild 1080 RMD160 440b44cc8e98252a2b2b44292f69de39c9b8c434 SHA1 f6572cf9d5c932d4a2f2cb433726defcaebd2861 SHA256 1c3f8c5aac5a1d25a0eb23d05c60ee489a7607c63acbcf9a254c19b10e77c281
 EBUILD mod_caucho-4.0.5.ebuild 1091 RMD160 a5ccad1bb13a88fec735836d7eb33edce92482e8 SHA1 079aec986b3b1feb40b4b70a772022f9b3f35e0d SHA256 b28b929f637e60d5fc896a3e1fbf3f0cd6fd000d6424534bf643bfd42ce456de
-MISC ChangeLog 9460 RMD160 7061857cc36443dcc2636b5edcb3e31412bc2347 SHA1 d52ea9edcdc45b714e7d39b1796e5612f6a31f58 SHA256 4d93bafd35a5464f650bef4d73a000816bad807c3a1865b327aac8d74a185b3b
+EBUILD mod_caucho-4.0.6.ebuild 1091 RMD160 4b39c25c837a7f361064cfe096e3362afae184f4 SHA1 ec646dc8ac332a073ef4a9489ee4813925c888d0 SHA256 cdf85bad310efe566702035a7c89a8827a0c7fdcc6ff8d030137fa9c7cab9d7c
+MISC ChangeLog 9592 RMD160 9b21d1baa9e69a189f8f0734bf4f9259188e7fa5 SHA1 9e73d2d5e30e68489332409e5c456b9185766876 SHA256 2c637aecb1a7ac98528973bf99669d8c9e897309e257c51c8a4b39a4347c75ee
 MISC metadata.xml 245 RMD160 ab2afa1527b94d2776eb4cff88ab06b86f4da8d4 SHA1 e75506fde1ffe1aab92c624c3299957c9819fafe SHA256 2934a1d824233ffc25ba694782ed7386f899e39e3020cc5fa82f5a0e371b1957
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iQEcBAEBAgAGBQJLteXMAAoJEBZyv1r2qA5GHScH/1ztBNa8oHY4+zUj8x5MDcAO
-05Kj125u7VLoTMB7fkz+O8DqUVjb1m+1KjgqZBurIWo/9wW/lpnCsCHhryGlRPmJ
-Q/VziD5Y0zvjF2qXtEt1sLsbsyEHUtnea6l3TRcrYvgKGEKLEyNXkTU51tDLyMii
-nRK7HnCBfxYXamlnAarX+wZ0gzhUf1AFDEKZC/qrtJJ2SACYaD/XwEAOibpJM682
-LQZXw6QeIqz1jSdVyzgI3PsXAaww9Dt/NMr9cN7Kkz93X3v6/pS2gxxYLD0IvgEJ
-jLGv9eFmBd9tUVWTi9YnUA6iQnGfuFPwLW2avm9ldaPIIvVNguaJwk+yKpnjTF4=
-=9YSq
+iQEcBAEBAgAGBQJLzMglAAoJEBZyv1r2qA5GiQUIAJE8G2E4fKw29fJGjnouSb8y
+e758L+Fy652hmbjjy9kRFxpzg/EmdlW/EsVz3iphLXpU0rO4J23Ej/ZqD9t75BsO
+Iw8/wWtKamrrptpn+7UHse6/Kv2v9KmS6XxbHT0mq3aaK21NIrNlD++fZHXKhiSn
+ST8pMw15OwU+R418v6e2xfmB0JnbSyZP4xeoutDvGCVkSxzD6QS88srz+mmIpbI+
+tgwhLyffx/j3G2Wgym9FMjutzh2vWUkhzA73mLsDCd4asuPUzuz2tu9HHH2nV4T4
+kTy3qs+xlytz0UK+bbXaOeoy7Nmae1qYmoJIled6Dfm8HbuJvDjBHowV0RSaBlI=
+=+2LJ
 -----END PGP SIGNATURE-----
