@@ -1,6 +1,12 @@
 # ChangeLog for www-apache/mod_caucho
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_caucho/ChangeLog,v 1.51 2010/04/02 12:40:37 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_caucho/ChangeLog,v 1.52 2010/04/19 21:16:15 nelchael Exp $
+
+*mod_caucho-4.0.6 (19 Apr 2010)
+
+  19 Apr 2010; Krzysztof Pawlik <nelchael@gentoo.org>
+  +mod_caucho-4.0.6.ebuild:
+  Version bump.
 
 *mod_caucho-4.0.5 (02 Apr 2010)
 
